Fix styles for results and button alignment

--- a/app/assets/stylesheets/measure_calculation.less
+++ b/app/assets/stylesheets/measure_calculation.less
@@ -41,34 +41,53 @@
     .coverage-label {
       .make-sm-column(4);
       padding: 0;
+      margin-left: -6px;
     }
 
     .coverage-data {
       .make-sm-column(4);
       .pull-right;
       padding: 0;
+      .btn-show-coverage {
+        margin-left: -6px;
+      }
     }
   }
 
   .patient {
     .patient-status-icon-col {
       .make-sm-column(1);
-      font-size: 1.2em;
+      font-size: 22px;
+      line-height: 1;
+      padding: 0;
     }
     .patient-user-icon-col {
       .make-sm-column(1);
+      font-size: 22px;
+      line-height: 1;
+      padding: 0;
     }
     .patient-btn-col {
       .make-sm-column(1);
       .pull-right;
+      line-height: 1;
+      padding-left: 0px;
+      padding-right: 8px;
+      padding-top: 0px;      
     }
     .patient-name-col {
-      .make-sm-column(5);
+      .make-sm-column(7);
       font-size: 14px;
+      line-height: 1;
+      padding: 0;
+      margin-top: 6px;
     }
     .patient-status-col {
-      .make-sm-column(3);
+      .make-sm-column(2);
       font-size: 1.2em;
+      line-height: 1;
+      padding: 0;
+      margin-top: 3px;
     }
     .pass {
       .text-success;
